--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -33,6 +35,7 @@ androidExtensions {
 ext {
     support_library_version = '27.1.1'
     retrofit_version = '2.4.0'
+    room_version = '1.1.0'
 }
 
 dependencies {
@@ -50,6 +53,11 @@ dependencies {
 
     // Image Processing
     implementation 'com.facebook.fresco:fresco:1.9.0'
+
+    // Database
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
