--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -35,7 +32,7 @@ androidExtensions {
 ext {
     support_library_version = '27.1.1'
     retrofit_version = '2.4.0'
-    room_version = '1.1.0'
+    room_version = '1.1.1-rc1'
 }
 
 dependencies {
@@ -56,7 +53,11 @@ dependencies {
 
     // Database
     implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    // NOTE THAT:: use `annotationProcessor` replace the `kapt`
+    // because of a bug about gradle can not sync with Kotlin 1.2.3X or above
+    // within AS 3.1.X or 3.2 canaries. issue refer to this:
+    // https://issuetracker.google.com/issues/74537216
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 
     testImplementation 'junit:junit:4.12'
