--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext {
     support_library_version = '27.1.1'
     retrofit_version = '2.4.0'
     room_version = '1.1.1-rc1'
+    fresco_version = '1.9.0'
 }
 
 dependencies {
@@ -50,7 +51,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     // Image Processing
-    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation "com.facebook.fresco:fresco:$fresco_version"
+    implementation "com.facebook.fresco:imagepipeline-okhttp3:$fresco_version"
 
     // Database
     implementation "android.arch.persistence.room:runtime:$room_version"
